--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -6,3 +6,12 @@
     width: 50px;
     height: 50px;
 }
+
+.book-logo {
+    min-width: 170px;
+    width: 100%;
+    height: 170px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
