--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -15,3 +15,13 @@
     background-position: center;
     background-size: cover;
 }
+
+.title-area {
+    background-color: black;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    font-size: 1.5rem;
+    min-height: calc(65vh);
+}
