add review showing functionality

--- a/app/templates/reviews/macros.html
+++ b/app/templates/reviews/macros.html
@@ -29,7 +29,7 @@
 <div class="review p-3 mb-3">
     <div class="d-flex">
         <div class="flex-shrink-0">
-            <img src="{{ url_for('static', filename='images/default-profile-picture.jpeg') }}"
+            <img src="{{ url_for('static', filename='images/person.jpg') }}"
                 style="max-width: 6rem;" class="rounded-circle" alt="Sample Image">
         </div>
         <div class="flex-grow-1  ms-3">
