--- a/app/templates/books/show.html
+++ b/app/templates/books/show.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
+<!-- Импортируем макро для отображения рецензии -->
+{% from 'reviews/macros.html' import review_view %}
+
 {% block content %}
 <div class="title-area position-relative" style="background-image: url({{ book.image.url }});">
     <div class="h-100 w-100 py-5 d-flex text-center position-absolute" style="background-color: rgba(0, 0, 0, 0.65);">
@@ -39,5 +42,25 @@
         <p>{{ book.short_desc | safe() }}</p>
     </section>
 </div>
+
+<section class="reviews mb-5">
+    <h2 class="mb-3 text-center text-uppercase font-weight-bold">Рецензии</h2>
+    {% if reviews %}
+    {% for review in reviews %}
+    {{ review_view(review)}}
+    {% endfor %}
+    {% endif %}
+</section>
+<section class="current-user-review mb-5">
+    {% if user_review %}
+    <h3 class="mb-3 text-center text-uppercase font-weight-bold">Ваша рецензия</h3>
+    {{ review_view(user_review) }}
+    {% elif current_user.is_authenticated %}
+    <div class="container text-center">
+        <a class="custom_link text-black btn btn-primary" href="{{url_for('reviews.new', book_id=book.id)}}">Написать
+            рецензию</a>
+    </div>
+    {% endif %}
+</section>
 
 {% endblock %}
