--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,7 +49,7 @@
                     <div class="text-white">
                         {{ current_user.full_name }}
                     </div>
-                    <a class="btn btn-primary" href="{{ url_for('auth.logout') }}">Выйти</a>
+                    <a class="ms-3 btn btn-primary" href="{{ url_for('auth.logout') }}">Выйти</a>
                 </div>
             </div>
             {% else %}
